<resources>
    <string name="app_name">HotelsMVP</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="facebook_app_id">2104258282956308</string>
    <string name="fb_login_protocol_scheme">fb2104258282956308</string>
    <string name="com_facebook_loginview_log_in_button_long">Continuar con facebook </string>
    <string name="start_with_mail">Iniciar Sesión con E-mail</string>
    <string name="start_with_google">Continuar con Google</string>
    <string name="start_with_facebook">Continuar con Facebook</string>
    <string name="start_session_to_see_private_area">Inicia sesión para ver tu zona privada.</string>
    <string name="hotels_mvp">Hotels MVP</string>
    <string name="close_session">Cerrar Sesión</string>
    <string name="with_email_account">en la cuenta de Hotels MVP con su e-mail</string>
    <string name="start_session">Iniciar sesión</string>
    <string name="password">Contraseña</string>
    <string name="e_mail">E-mail</string>
    <string name="start_session_with_email">Iniciar sesión con su E-mail</string>
    <string name="create_account">Crear tu cuenta</string>
    <string name="error_invalid_credentials">Las credenciales no son válidas.Revise sus credenciales e acceso.</string>
    <string name="error_user_already_exists">El usuario ya existe en el sistema.</string>
    <string name="error_need_authenticate_again">Se requiere autenticarse de nuevo.</string>
    <string name="error_user_not_found">No hay ningún usuario registrado con esta cuenta.</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="save">Guardar</string>
    <string name="upload_image">Cambiar Imagen</string>
    <string name="name">Nombre</string>
    <string name="user_profile">Perfil</string>
    <string name="login">Login</string>
    <string name="hotels">Hoteles</string>
    <string name="start_session_or_create">Iniciar sesión o crear una cuenta</string>
    <string name="welcome">Bienvenido</string>
    <string name="drawer_open">abrir</string>
    <string name="drawer_close">cerrar</string>
    <string name="filter_hotels">Filtrar Hoteles</string>
    <string name="hotelsmvp">HotelsMVP</string>
    <string name="anonymous">Anónimo</string>
    <string name="date_pattern">MMMM dd, yyyy HH:mm</string>
    <string name="must_fill_email">Debe introducir un Email.</string>
    <string name="not_valid_email">Email no válido.</string>
    <string name="must_fill_password">Debe introducir una contraseña.</string>
    <string name="password_wrong_length">La contraseña tiene una longitud inferior a 6.</string>


</resources>
