<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_login"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/start_session_or_create" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/user_profile"
            android:title="@string/welcome"
            android:visible="false" />
    </group>
    <group
        android:id="@+id/group_session"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_session"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/close_session"
            android:visible="false" />
    </group>
</menu>