<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_login"
    tools:context="com.alejoestevez.hotelsmvp.ui.EmailLoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/emailLogin_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/white">

    </android.support.v7.widget.Toolbar>

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emailLogin_label_start_session"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_session"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailLogin_label_start_session2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/with_email_account" />

            <EditText
                android:id="@+id/emailLogin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:padding="16dp" />

            <TextView
                android:id="@+id/emailLogin_email_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/material_color_1"
                android:textSize="14sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/emailLogin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp" />

            <TextView
                android:id="@+id/emailLogin_password_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/material_color_1"
                android:textSize="14sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/emailLogin_login_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:backgroundTint="@color/material_color_5"
                android:text="@string/start_session_with_email"
                android:textColor="@color/white"></Button>

            <Button
                android:id="@+id/emailLogin_register_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:backgroundTint="@color/material_color_3"
                android:text="@string/create_account"
                android:textColor="@color/white"></Button>
        </LinearLayout>


    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
