<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_login"
    tools:context="com.alejoestevez.hotelsmvp.ui.LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/login_subTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_subTitle"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:background="@color/alphaTransparency"
        android:text="@string/start_session_to_see_private_area"
        android:textAlignment="center"
        android:textColor="@color/material_color_8"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_signInFacebook_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/com_facebook_blue"
        android:drawableLeft="@drawable/com_facebook_button_login_logo"
        android:text="@string/start_with_facebook"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/login_signInGoogle_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>

    <Button
        android:id="@+id/login_signInGoogle_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/googleg_standard_color_18"
        android:text="@string/start_with_google"
        android:textColor="@color/common_google_signin_btn_text_light"
        app:layout_constraintBottom_toTopOf="@+id/login_email_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>

    <Button
        android:id="@+id/login_email_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:backgroundTint="@color/material_color_5"
        android:drawableLeft="@android:drawable/ic_dialog_email"
        android:text="@string/start_with_mail"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/login_view_decorator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>

    <View
        android:id="@+id/login_view_decorator"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/login_register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </View>

    <Button
        android:id="@+id/login_register_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:backgroundTint="@color/material_color_3"
        android:text="@string/create_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>

    <android.support.constraint.Guideline
        android:id="@+id/login_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="350dp" />

    <Button
        android:id="@+id/login_signOut_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/material_color_1"
        android:text="@string/close_session"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/login_signInGoogle_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>
</android.support.constraint.ConstraintLayout>
